<resources>

    <string name="app_name">Contact Manager</string>
    <string name="view_conatct">View \nContacts</string>
    <string name="add_conatct">Add \nContacts</string>
    <string name="modify_conatct">Modify Contacts</string>
    <string name="delete_conatct">Delete Contacts</string>
    <string name="no_contact">Sync in progress</string>
    <string name="sync">Sync in Progress</string>
     <string name="name_label">Name : </string>
      <string name="phone_label">Phone No : </string>
      <string name="type">Type</string>
      <string name="email_label">Email id : </string>
      <string name="a_z">A-Z</string>
      <string name="add">Add Contact</string>
       <string name="modify">Modify Contact</string>
      <string name="edit">Edit Contact</string>
      <string name="delete">Delete Contact</string>
      <string name="spinner_type">Add Contact</string>
      
    

</resources>
