<?xml version="1.0"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tab_bar"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >

    

    <RelativeLayout
        android:id="@+id/horizontal_pager"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1"
        >
        
        <LinearLayout        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical"
        >

      <Button
            android:id="@+id/btnviewcontact"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/button_selector"
            android:text="@string/view_conatct"
            android:textColor="@color/white"
            
            android:layout_weight="1"
            
            
             />

        <Button
            android:id="@+id/btnsddcontact"
            android:layout_width="80dp"
            android:layout_height="80dp"
         
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_selector"
             android:text="@string/add_conatct"
            android:textColor="@color/white"
            android:layout_weight="1"
             />
        
         <Button
            android:id="@+id/btnmodifycontact"
            android:layout_width="80dp"
            android:layout_height="80dp"
            
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_selector"
       android:text="@string/modify_conatct"
            android:textColor="@color/white"
            android:layout_weight="1"
             />

        <Button
            android:id="@+id/btndeletecontact"
            android:layout_width="80dp"
            android:layout_height="80dp"
            
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_selector"
            android:text="@string/delete_conatct"
            android:textColor="@color/white"
            android:layout_weight="1"
             />
        
       </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp" >
        </FrameLayout>
    </RelativeLayout>

    <include layout="@layout/nocontact_main" />

</LinearLayout>