<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent"
	  android:gravity="left|center_horizontal">
	
	  <TextView
	      android:id="@+id/list_name_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      
	      android:textStyle="bold"
	      android:text="@string/name_label"
	      android:padding="5dip"/>
	  
	  <TextView
	      android:id="@+id/list_name_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/list_name_label"
	      android:gravity="center"
	      android:textStyle="bold"	     
	      android:layout_marginLeft="32dip"
	      android:padding="5dip"
	     android:textColor="@color/blue"
	  />
	  
	  <Button
	      android:id="@+id/btn_delete_list"
	      android:layout_width="wrap_content"
	      android:layout_height="40dip"
	    android:layout_alignParentRight="true"
	      android:gravity="center"
	           android:textSize="15sp"
	      android:text="@string/delete"
	      
	     
	  />
	  
	   <TextView
	      android:id="@+id/list_phone_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_below="@id/list_name_label"
	      android:textStyle="bold"
	      android:text="@string/phone_label"
	      android:padding="5dip"/>
	  
	  <TextView
	      android:id="@+id/list_phone_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/list_phone_label"
	    android:layout_below="@id/list_name_text"
	      android:gravity="center"
	      android:textStyle="bold"	     
	      android:padding="5dip"
	      android:layout_marginLeft="10dip"
	     android:textColor="@color/blue"
	  />
	  
	  <TextView
	      android:id="@+id/list_phonetype_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_toLeftOf="@+id/list_phonetype_text"
	      android:layout_below="@id/list_name_label"
	      android:textStyle="bold"
	      android:text="@string/type"
	      android:padding="5dip"/>
	  
	  <TextView
	      android:id="@+id/list_phonetype_text"
	      android:layout_width="60dip"
	      android:layout_height="wrap_content"	   
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/list_name_text"
	      android:gravity="center"
	      android:textStyle="bold"	     
	      android:padding="5dip"
	      
	      
	     android:textColor="@color/blue"
	  />
	  
	   <TextView
	      android:id="@+id/list_email_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_below="@id/list_phone_label"
	      android:textStyle="bold"
	      android:text="@string/email_label"
	      android:padding="5dip"/>
	  
	  <TextView
	      android:id="@+id/list_email_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/list_email_label"
	    android:layout_below="@id/list_phone_text"
	      android:gravity="center"
	      android:textStyle="bold"	     
	      android:padding="5dip"
	     android:layout_marginLeft="22dip"
	     android:textColor="@color/blue"
	  />
	  
	  <TextView
	      android:id="@+id/list_emailtype_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_toLeftOf="@+id/list_emailtype_text"
	      android:layout_below="@id/list_phone_label"
	      android:textStyle="bold"
	      android:text="@string/type"
	      android:padding="5dip"/>
	  
	  <TextView
	      android:id="@+id/list_emailtype_text"
	      android:layout_width="60dip"
	      android:layout_height="wrap_content"	   
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/list_phone_text"
	      android:gravity="center"
	      android:textStyle="bold"	     
	      android:padding="5dip"
	      
	    
	     android:textColor="@color/blue"
	  />
	 
	</RelativeLayout>